chore: Implementando Jacoco e SonarQube | Fix: Corrigindo Erros de implementação e falha de segurança